Correction mobilenavbar qui prenait espace sur reste page

--- a/src/SpectaclePage/spectacle.module.scss
+++ b/src/SpectaclePage/spectacle.module.scss
@@ -17,6 +17,7 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   padding: 0;
+  margin-bottom: 80px;
 }
 
 .card {
